--- a/exam-management/src/main/resources/application.properties
+++ b/exam-management/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/exam_management_system
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=
+spring.datasource.password=
