--- a/exam-management/src/main/resources/application.properties
+++ b/exam-management/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/exam_management_system
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=Elcan619
+spring.datasource.username=
+spring.datasource.password=
 
+spring.jpa.show-sql=true
