--- a/exam-management/src/main/resources/application.properties
+++ b/exam-management/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3366/bruh
+spring.datasource.url=jdbc:mysql://localhost:3306/exam_management_system
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=13.5.45.8.62
+spring.datasource.password=Elcan619
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
